--- a/index.html
+++ b/index.html
@@ -4,11 +4,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="HTML boilerplate">
+  <meta name="keywords" content="HTML, test">
   <title>Document</title>
 </head>
 
 <body>
+  <div>
+    <header>
+      <div></div>
+      <nav></nav>
+    </header>
+    <main>
+      <section>
 
+      </section>
+      <section></section>
+    </main>
+    <footer>
+      <div></div>
+    </footer>
+  </div>
 </body>
 
 </html>
