--- a/index.html
+++ b/index.html
@@ -2,27 +2,33 @@
 <html lang="en">
 
 <head>
+  <link rel="stylesheet" href="css/style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="HTML boilerplate">
   <meta name="keywords" content="HTML, test">
-  <title>Document</title>
+  <title>Boilerplate</title>
 </head>
 
 <body>
   <div>
-    <header>
-      <div></div>
+    <header class="header">
+      <div class="header-container">
+        <h1>Boilerplate</h1>
+      </div>
       <nav></nav>
     </header>
-    <main>
-      <section>
+    <main class="content">
+      <div class="content-container">
+        <section>
+        </section>
+        <section>
+        </section>
+      </div>
 
-      </section>
-      <section></section>
     </main>
-    <footer>
-      <div></div>
+    <footer class="footer">
+      <div class="footer-container"></div>
     </footer>
   </div>
 </body>
