add wrapper div

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <div class="wrapper">
     <header class="header">
       <div class="header-container">
         <h1>Boilerplate</h1>
@@ -29,6 +30,7 @@
     <footer class="footer">
       <div class="footer-container"></div>
     </footer>
+  </div>
 </body>
 
 </html>
